--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 h1{
-	font-family: "Ubuntu", sans-serif;
+	font-family: "Raleway", sans-serif;
+	font-weight: bold;
 }
 
 h2{
@@ -11,9 +12,12 @@ h2{
 }
 
 #banner h1{
-	letter-spacing: 31px;
-	margin-left: 32px;
+	letter-spacing: 5px;
 	margin-bottom: -30px;
+}
+
+#banner h2{
+	letter-spacing: 2px;
 }
 
 hr{
@@ -92,14 +96,6 @@ footer{
 
 #li{
 		background-image: url("../resources/li.png");
-}
-
-#fb{
-	background-image: url("../resources/fb.png");
-}
-
-#twitter{
-	background-image: url("../resources/twitter.png");
 }
 
 .mediaIcon{
@@ -182,4 +178,18 @@ border-radius: 4px;
 
 .jumbotron p{
 	color: #000;
+}
+
+#contactInfo li{
+	list-style: outside none none;
+	line-height: 30px;
+}
+
+#contactInfo i{
+	padding-right: 20px;
+}
+
+.img-circle{
+	border-radius: 50%;
+	height:100px;
 }
